<resources>
    <string name="app_name">AndroidDroidCafeApp</string>
    <string name="text_intro">Droid Desert</string>
    <string name="donut_content_description">Donuts are glazed and sprinkled with candy</string>
    <string name="ice_cream_content_description">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_content_description">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="order_label_text">Order:</string>
    <string name="name_label_text">Name:</string>
    <string name="name_label_edit_text">Enter your name: </string>
    <string name="address_label_text">Address:</string>
    <string name="address_label_edit_text">Enter your address: </string>
    <string name="phone_label_text">Phone:</string>
    <string name="phone_label_edit_text">Enter your phone number: </string>
    <string name="note_label_text">Note:</string>
    <string name="note_label_edit_text">Enter your note: </string>
    <string name="delivery_label_text">Choose a delivery method:</string>
    <string name="same_day_messenger_service_text">Same day messenger service</string>
    <string name="next_messenger_service_text">Next day messenger service</string>
    <string name="pick_up_service_text">Pick up</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Mobile</item>
        <item>Work</item>
        <item>Other</item>
    </string-array>
</resources>
