<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <com.google.android.material.textview.MaterialTextView
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/order_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginLeft="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/order_label_text"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    </com.google.android.material.textview.MaterialTextView>

   <com.google.android.material.textview.MaterialTextView
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:id="@+id/name_level_text_view"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/name_label_text"
       android:textSize="@dimen/_20ssp"
       android:layout_marginStart="@dimen/_24sdp"
       android:layout_marginLeft="@dimen/_24sdp"
       android:layout_marginTop="@dimen/_24sdp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/order_text_view"
       >

   </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textfield.TextInputEditText
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:ems="10"
        android:hint="@string/name_label_edit_text"
        android:inputType="textPersonName"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBaseline_toBaselineOf="@id/name_level_text_view"
        app:layout_constraintStart_toEndOf="@id/name_level_text_view"
        app:layout_constraintTop_toBottomOf="@id/order_text_view">

    </com.google.android.material.textfield.TextInputEditText>



</androidx.constraintlayout.widget.ConstraintLayout>